@@ -3,7 +3,7 @@ web.website.help.url = https://nwaldispuehl.github.io/interval-music-compositor/
 web.website.about.url = https://nwaldispuehl.github.io/interval-music-compositor/et_cetera
 
 # Error stuff
-ui.error.introduction = Folgender Fehler trat auf.\n\r
+ui.error.general.introduction = Folgender Fehler trat auf.\n\r
 ui.error.memory.introduction = Das Programm benötigt für einen Vorgang mehr Hauptspeicher (RAM) als es zugewiesen erhielt.\n\r
 ui.error.sound.introduction = Eine Musikdatei verursachte einen Fehler, von dem sich das Programm nicht erholen kann.\n\r
 ui.error.soundeffectformat.introduction = Das Datenformat des Soundeffekts ist unbekannt.\n\r
