@@ -3,9 +3,9 @@ web.website.help.url = https://nwaldispuehl.github.io/interval-music-compositor/
 web.website.about.url = https://nwaldispuehl.github.io/interval-music-compositor/en/et_cetera
 
 # Error stuff
-ui.error.introduction = Hello! There was a problem!\n\r
-ui.error.memory.introduction = Hello! There was a problem! The program gets not enough memory to process your request!\n\r
-ui.error.sound.introduction = Hello! There was a problem with at least one of the sound files!\n\r
+ui.error.general.introduction = There was a problem!\n\r
+ui.error.memory.introduction = The program gets not enough memory (RAM) to process your request!\n\r
+ui.error.sound.introduction = There was a problem with at least one of the sound files!\n\r
 ui.error.soundeffectformat.introduction = The sound effect has an unknown data format.\n\r
 
 # Status of the compilation
